added random square states

--- a/src/components/GameScreen/components/GameGrid/Square/index.css
+++ b/src/components/GameScreen/components/GameGrid/Square/index.css
@@ -1,7 +1,7 @@
 
 .item {
   aspect-ratio: 1;
-  background-color: #22ff00;
+  background-color: #f7ffeae2;
   padding: 20px;
   text-align: center;
   display: inline-block;
