--- a/src/components/GameScreen/index.css
+++ b/src/components/GameScreen/index.css
@@ -1,5 +1,4 @@
 .container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3 columns with equal width */
-  grid-gap: 10px; /* Gap between grid items */
+  max-height: 100vh;
+  width: 100vw;
 }
