--- a/src/components/GameScreen/components/GameGrid/index.css
+++ b/src/components/GameScreen/components/GameGrid/index.css
@@ -1,5 +1,6 @@
 .grid {
   display: grid;
+  padding: 10px;
   grid-template-columns: repeat(3, 1fr); /* 3 columns with equal width */
   grid-gap: 10px; /* Gap between grid items */
   max-height: inherit;
