--- a/src/components/GameScreen/index.css
+++ b/src/components/GameScreen/index.css
@@ -2,3 +2,9 @@
   max-height: 100vh;
   width: 100vw;
 }
+
+.parent {
+  display: flex;
+  flex-direction: column;
+  height: 100vh; /* Adjust as needed */
+}
