--- a/src/components/WelcomeScreen/index.css
+++ b/src/components/WelcomeScreen/index.css
@@ -1,6 +1,8 @@
 .welcome-screen {
-  text-align: center;
   padding: 20px;
+  margin: auto;
+  text-align: center;
+  max-width: 800px;
 }
 
 .instructions {
